# session-loam

./: .gitignore  DESIGN.md  LICENSE  README.md  pyproject.toml
examples/compaction-bridge/: README.md  loam-precompact.sh  loam-session-start.sh  settings.example.json
session_loam/: __init__.py  cli.py  entry.py  search.py  store.py
site/: .gitignore  astro.config.mjs  package.json
site/k8s/: memory-website.yaml
site/src/components/: Footer.astro  Nav.astro
site/src/layouts/: Base.astro
site/src/pages/: index.astro  patterns.astro
site/src/pages/docs/: api.astro  comparison.astro  concepts.astro  index.astro  production.astro  quickstart.astro
site/src/pages/examples/: compaction-bridge.astro  index.astro  memory-aware-handler.astro
tests/: test_cli.py  test_cli_day5.py  test_prune_export.py  test_search.py  test_store.py
